change name of script for cache

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -58,7 +58,7 @@
                     <div class="product">
                         <h3>Astamorris Sweater</h3>
                         <img id="sweaterImg" src="img/sweater_black.png" alt="Astamorris Sweater" width="250">
-                        <div class="price">Prijs: € 30,00</div>
+                        <div class="price">Prijs: € 45,00</div>
                         <label for="sizeB">Maat:</label>
                         <select id="sizeB" name="sizeB" required>
                             <option value="XS">XS</option>
