--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -105,13 +105,16 @@
                     <label for="phone">Telefoon:</label>
                     <input type="tel" id="phone" name="phone" autocomplete="tel" required>
                     <br />
-                    <div id="basket" style="border:1px solid #ccc; padding:10px; border-radius:8px; margin-bottom:12px;">
+                    <div id="basket">
                         <strong>Winkelmandje:</strong>
-                        <div id="basketItems"><em>Geen producten toegevoegd.</em></div>
+                        <div id="basketItemsDisplay"><em id="basketEmptyMsg">Geen producten toegevoegd.</em></div>
                     </div>
                     <input type="hidden" id="basketTotal" name="basketTotal" value="0">
-                    <input type="hidden" id="basketItems" name="basketItems" value="">
-                    <button type="submit">Bestel</button>
+                    <input type="hidden" id="basketItems" name="basketItems" value="[]">
+                    <div style="margin-top:8px;">
+                        <button type="submit" id="submitOrder" disabled>Bestel</button>
+                        <div id="submitHint" style="font-size:12px;color:#b30000;margin-top:4px;">Voeg minstens één product toe om te bestellen.</div>
+                    </div>
                 </div>
             </form>
         </div>
